--- a/Layouts_UX/ex3.html
+++ b/Layouts_UX/ex3.html
@@ -77,7 +77,7 @@
             <!-- Middle section -->
             <div class="middle-section">
                 <!-- Image for pizza -->
-                <img src="picture.png" alt="Pizza" width="500px" height="400px">  
+                <img src="pizza.png" alt="Pizza" width="500px" height="400px">  
             </div>
             <!-- Right section -->
             <div class="right-section">
