--- a/Codepen_UX/Codepen_UX.html
+++ b/Codepen_UX/Codepen_UX.html
@@ -95,19 +95,30 @@
             <!-- Above section with header -->
             <div class="above-section"> 
               <div class="header1"></div> 
-              <img src="slash.png" alt="html" width="2px" height="2px">
-            </div>
+                <nav class="navbar">
+                        <span class="nav-item">HTML</span>
+                    </nav>
+            </div> 
+          </div>
             <!-- Middle section with header -->
             <div class="middle-section-right"> 
-              <div class="header2"></div>
+              <div class="header2"> 
+                  <nav class="navbar">
+                        <span class="nav-item">CSS</span>
+                    </nav>
+                </div>
             </div>
             <!-- Below section with header -->
             <div class="below-section"> 
-              <div class="header3"></div>
+              <div class="header3">
+                  <nav class="navbar">
+                     <span class="nav-item">JS</span> 
+                  </nav>
             </div>
           </div>
       </div>
     </div>
+</div>
     <!-- Footer section with navigation links -->
     <footer id="foot-bar"> 
       <a href="#">Console</a>
